# tvm

./: .gitignore  CMakeLists.txt  bert_iree.py  bert_octomizer.py  bert_relax.py  bert_utils.py  different_networks.py  onnx_zoo_relax_test.py  onnx_zoo_test.py
.github/workflows/: main.yml
apps/cpp_rpc/: CMakeLists.txt
apps/hexagon_launcher/: launcher_android.cc  launcher_hexagon.cc
apps/ios_rpc/: CMakeLists.txt  README.md
apps/ios_rpc/tvmrpc/: TVMRuntime.mm  ViewController.mm
apps/ios_rpc/tvmrpc.xcodeproj/: project.pbxproj
cmake/modules/: CUDA.cmake  Vulkan.cmake
cmake/modules/contrib/: CUTLASS.cmake  (+2 more)
demo/: .gitignore  README.md  parse_perf_log.py  prepare.py  profile_model.py  requirements.txt  run_octomized_model.py
demo/DLRM/: CMakeLists.txt  README.md  main.cpp  params_demo.py  parse_timings_log.py  parse_timings_log_diff_batch.py  prepare.py  run_dlrm.py  timings.sh  tune_dlrm.py  tuning.sh
demo/DLRM/patches/: _main_py.patch  _run_common_sh.patch  backend_tvm.py
demo/DLRM/test_data/: batch_dense_X_ref  batch_lS_i_ref  batch_res_ref
demo/DLRM_mi/: README.md  accuracy.py  compile.py  models.py  multi_instance.py  performance.py  profile.py  run_over_instances.sh  run_resnet50.sh  tune_resnet50.py  tuning.py
demo/DNNL/: CMakeLists.txt  main.cpp  main_2.cpp  os_tools.hpp  sut.hpp  sut_tvm.cpp  workload.cpp  workload.hpp
demo/bert/: compile.py  matmul_check.cpp  multi_instance_BERT.py  run_all_bert.sh  run_over_instances.sh  tune_bert.py
demo/patches/: _tvm_patch.patch
src/auto_scheduler/: auto_schedule.cc  compute_dag.cc  feature.cc  measure.cc  measure_record.cc  search_task.cc
src/driver/: driver_api.cc
src/meta_schedule/: utils.h
src/runtime/: c_runtime_api.cc  dso_library.cc  library_module.cc  ndarray.cc  profiling.cc  thread_storage_scope.h  threading_backend.cc  workspace_pool.cc
tests/scripts/: task_config_build_gpu.sh  task_python_hexagon.sh
web/emcc/: tvmjs_support.cc
web/src/: runtime.ts
(+271 files in other folders)
